finished the notebooks, I need to still dot the ReadMe File

--- a/1-Data_Exploration.ipynb
+++ b/1-Data_Exploration.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "b7625606-747f-49e5-8da1-959ddd575855",
    "metadata": {
     "tags": []
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "4a06531c-a09b-4b22-b206-4fddebc42ee1",
    "metadata": {
     "tags": []
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "d78053f3-8d9d-4e1d-9ef6-b90e49922dae",
    "metadata": {
     "tags": []
@@ -237,7 +237,7 @@
        "(2824, 144)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "97cb4be2-ab5a-4764-9de2-f76e76689b2f",
    "metadata": {
     "tags": []
@@ -277,7 +277,7 @@
        " 'flux_CFHT-iy']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "fb74fbca-5f6b-4228-9429-7ef851dde077",
    "metadata": {
     "tags": []
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "2111bad9-663c-40ee-bbfb-219ebc4f6ea8",
    "metadata": {
     "tags": []
@@ -633,7 +633,7 @@
        "[8 rows x 144 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "e0722f58-17ef-45d0-adde-cf15ec5578d3",
    "metadata": {
     "tags": []
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "af600115-8dd1-462e-b3c8-270f89dad766",
    "metadata": {
     "tags": []
@@ -972,7 +972,7 @@
        "[8 rows x 144 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "108aae15-79ab-4e49-9092-d3521bd19d94",
    "metadata": {
     "tags": []
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "712b9bde-7660-4fa9-8974-070f1a2dddfb",
    "metadata": {
     "tags": []
@@ -1037,7 +1037,7 @@
        "(2824, 44)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1071,7 @@
    "id": "2d35e645-c566-4e94-84d0-08af248931d9",
    "metadata": {},
    "source": [
-    "Well, I will let you explore the all 46 features, but I am goint to explore only 3:\n",
+    "Well, I will let you explore the all 46 features, but I am going to explore only 3:\n",
     "\n",
     "- qir\n",
     "- Mstar\n",
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "05acbe21-15a1-4bc3-810b-759b62fd187f",
    "metadata": {
     "tags": []
@@ -1113,9 +1113,7 @@
    "cell_type": "markdown",
    "id": "d0f1088b-c702-41f7-a12f-4311212509b2",
    "metadata": {},
-   "source": [
-    "@@@ help here"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1143,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "77b88a3f-ab0b-491d-a22d-696e2eae1ef3",
    "metadata": {},
    "outputs": [],
