Fixed typos in 1-Data_Exploration.ipynb

--- a/1-Data_Exploration.ipynb
+++ b/1-Data_Exploration.ipynb
@@ -13,7 +13,7 @@
    "id": "b627147d-20ff-4980-8573-976f9d53be25",
    "metadata": {},
    "source": [
-    "Weclome!, The main goal for this notebook is to provide a deep understanding of the dataset, its characteristics, and any hidden patterns."
+    "Welcome!, The main goal for this notebook is to provide a deep understanding of the dataset, its characteristics, and any hidden patterns."
    ]
   },
   {
@@ -47,7 +47,7 @@
    "id": "c78a0cad-ef3d-42f9-ace9-4e990769345e",
    "metadata": {},
    "source": [
-    "This porjects analyze radio continuum data from the MeerKAT International GHz Tiered Extragalactic Exploration([MIGHTEE](https://idia.ac.za/mightee/)) survey, focusing on extragalactic radio emissions in the COSMOS field. MIGHTEE offers insights into galaxy evolution, given its depth and multiwavelength coverage. The COSMOS field, devoid of bright radio, UV, and X-ray sources, is ideal for deep astronomical surveys."
+    "This project analyzes radio continuum data from the MeerKAT International GHz Tiered Extragalactic Exploration ([MIGHTEE](https://idia.ac.za/mightee/)) survey, focusing on extragalactic radio emissions in the COSMOS field. MIGHTEE offers insights into galaxy evolution, given its depth and multiwavelength coverage. The COSMOS field, devoid of bright radio, UV, and X-ray sources, is ideal for deep astronomical surveys."
    ]
   },
   {
@@ -55,7 +55,7 @@
    "id": "fabf8c96-5a70-4462-a600-73d68200b3b6",
    "metadata": {},
    "source": [
-    "The MIGHTEE-COSMOS data includes deep fields like E-CDFS, ELAIS-S1, and XMM-LSS, covering 20 deg^2 areas at a central frequency of 1284 MHz. These fields were observed using MeerKAT's L-band receivers for about 1000 hours. They were chosen due to their extensive multiwavelength data from prior and potential future surveys."
+    "The MIGHTEE data includes deep fields like COSMOS, XMM-LSS, E-CDFS and ELAIS-S1, covering a 20 deg^2 total area at a central frequency of 1284 MHz. These fields were observed using MeerKAT's L-band receivers for about 1000 hours. They were chosen due to their extensive multiwavelength data from prior and potential future surveys."
    ]
   },
   {
@@ -63,7 +63,7 @@
    "id": "e71d2905-2936-4311-bd92-3e4f03ffc5f5",
    "metadata": {},
    "source": [
-    "The **MIGHTEE-COSMOS multiwavelength catalogue** combines radio data with optical, near-to-far infrared, and X-ray measurements from various sources in the COSMOS field. The main radio catalogue was cross-referenced with optical and near-infrared data from other studies, resulting in a matched set of 5,224 radio sources. Additionally, 572 of these sources were detected in X-ray observations. This dataset also incorporated Mid-Infrared (MIR) data, referencing specific IRAC flux densities. The catalogue further integrated far-infrared data from the Herschel Extra-galactic Legacy Project, identifying thousands of radio sources across different instruments."
+    "The **MIGHTEE-COSMOS multiwavelength catalogue** we will use here combines radio data with optical, near-to-far infrared, and X-ray measurements from various sources in the COSMOS field. The main radio catalogue was cross-matched with optical and near-infrared data from other studies, resulting in a matched set of 5,224 radio sources. Additionally, 572 of these sources were detected in X-ray observations. This dataset also incorporated Mid-Infrared (MIR) data, referencing specific IRAC flux densities. The catalogue further integrated far-infrared data from the Herschel Extra-galactic Legacy Project, identifying thousands of radio sources across different instruments."
    ]
   },
   {
